ecmascript/parser/tests/test262-error-references/fail/c578b57e8e6ce80d.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/c578b57e8e6ce80d.js:1:16
  |
1 | var answer = 42,
  |                ^

